# AtriaKit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
atriakit/: __init__.py  annotations.py  constants.py  datasets.py  feature_calculator.py  utils.py
atriakit/configs/: annotations_loader_config.py  feature_calculator_config.py  feature_computation_config.py  pipeline_config.py  segment_config.py  signal_preprocessor_config.py
atriakit/features/: amplitude.py  area.py  complexity.py  entropy.py  fragments.py  morphology.py  vcg.py
atriakit/io/: __init__.py  annotations_loader.py  base_loader.py  dicom_loader.py  ecg_loader.py
atriakit/models/: __init__.py  annotation_row.py  annotation_schema.py  annotations.py  ecg_data.py
atriakit/preprocessing/: __init__.py  annotations.py  signals.py
atriakit/processing/: dataset.py  pipeline.py  segment_processor.py
ecg_annotator/: LICENSE  README.md  conftest.py  ecg-annotator.toml  make_binary.sh  pyproject.toml
ecg_annotator/src/ecg_annotator/: annotator.py  config.py  const.py  logging_config.py  main.py  plotter.py
ecg_annotator/src/ecg_annotator/annotations/: mapper.py  row_builder.py  serialization.py  validation.py
ecg_annotator/src/ecg_annotator/loaders/: annotation_loader.py  data_loader.py  dcm_loader.py  mat_loader.py
ecg_annotator/src/ecg_annotator/models/: recording.py  state.py
ecg_annotator/src/ecg_annotator/utils/: time.py
ecg_annotator/tests/: test_annotator.py  test_annotator_logic.py  test_config.py  test_data_loader.py  test_ecg_loader.py  test_loader.py  test_logging_config.py  test_mapper.py  test_mat_loader.py  test_plotter.py  test_row_builder.py  test_serialization.py  test_service.py  test_time.py  test_validation.py
examples/: demo.ipynb  pipeline_config.yaml
tests/: test_annotation_processor.py  test_annotations.py  test_ecg_data.py  test_ecg_dataset.py  test_features.py  test_integration.py  test_loaders.py  test_morphology.py  test_pipeline.py  test_segment_processor.py  test_signal_preprocessor.py  test_utils.py
